--- a/styles/style.css
+++ b/styles/style.css
@@ -1,64 +1,125 @@
-.header{
+.header {
+  margin: 0 81px;
+  width: 1440px;
   display: grid;
-  grid-template-columns: 2fr 2fr 1fr; 
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 92px 51px;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 92px 50px 92px 50px;
 }
 
-.header content-section {
-  box-sizing: border-box;
-  width: 100%;
-  max-width: 360px;
-  min-height: 100px;
-  margin: auto;
-
-}
-
-.header__menu-list {
+.header__links-list {
   display: flex;
-  flex-direction: row;
+  gap: 32px;
   list-style-type: circle;
-  gap: 26px;
-  padding: 43px;
-}
-
-.header__menu-link{
-  color: #000;
-  font-family: Raleway;
+  text-underline-offset: 5px;
+  color: #000000;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-
 }
 
-.header__menu-item:first-child {
+.header__links-list-item_no-bullit {
   list-style-type: none;
 }
 
-
-.header__logo {
-  display: flex;
-  
-}
-
 .header__logo-image {
-  display: flex;
   width: 148px;
   height: 105px;
+}
+
+.address {
+  color: #000000;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  text-underline-offset: 5px;
+  width: 240px;
+  justify-self: end;
+}
+
+.cover {
+  position: absolute;
+  width: 100%;
+  background-image: url("/images/cover.jpg");
+  height: 757px;
+  background-position: center center;
+  background-size: 100% auto;
+}
+
+.overlay {
+  height: inherit;
+  position: absolute;
+  background-color: rgb(0 0 0 / 0.6);
+  z-index: 100;
+  inset: 0;
+}
+
+.cover_title {
+
+}
+
+.align__left {
+  display: block;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%;
+  /* 115px */
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  text-align: left;
+  padding: 164px 130px;
+}
+
+.align__center {
+  display: block;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 60px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.align__right {
+  display: block;
+  text-align: right;
+  color: #fff;
+  text-align: right;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 100px */
+  letter-spacing: 60px;
+  text-transform: uppercase;
   
 }
 
-.addres__text{
-color: #000;
-font-family: Raleway;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 24.3px; /* 135% */
+.cover__description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
 }
 
-.tel{
-  text-decoration: none;
+.cover__description-text {
+  color: #fff;
+  text-align: center;
+  font-family: Raleway, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  /* 127.273% */
+  text-transform: uppercase;
+  word-spacing: 15px;
 }
