--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  text-underline-offset: 5px;
+  text-underline-offset: 3px;
   width: 240px;
   justify-self: end;
 }
@@ -49,53 +49,92 @@
 }
 
 .overlay {
-  height: inherit;
-  position: absolute;
+  position: relative;
   background-color: rgb(0 0 0 / 0.6);
   z-index: 100;
   inset: 0;
+  height: 100%;
+  width: 100%;
 }
 
-.cover_title {
-  position: relative;
+.cover__title {
+  display: flex;
 }
 
-.aligned-text {
+.align__left {
+  position: absolute;
   color: #fff;
   font-family: Raleway, sans-serif;
   font-size: 100px;
   font-style: normal;
   font-weight: 700;
   line-height: 115%;
-  /* 115px */
   letter-spacing: 30px;
   text-transform: uppercase;
+  justify-content: start;
+  inset: 165px 49px 30px;
+  z-index: 100;
 }
 
-.letter-spacing-extended {
+.align__center {
+  position: absolute;
   color: #fff;
   font-family: Raleway, sans-serif;
   font-size: 100px;
   font-style: normal;
   font-weight: 700;
   line-height: 115%;
-  letter-spacing: 60px;
+  letter-spacing: 30px;
   text-transform: uppercase;
-}
-
-.aligned-text_right {
-  text-align: right;
-}
-
-.aligned-text_center {
   text-align: center;
+  justify-content: center;
+  inset: 292px 0 0 -153px;
+  z-index: 100;
+}
+
+.align__right {
+  position: absolute;
+  color: #fff;
+  text-align: right;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+  text-align: right;
+  justify-content: flex-end;
+  inset: 420px 392px;
+  z-index: 100;
+}
+
+.align__left-span {
+  padding: 0 242px;
+}
+
+.align__center-span {
+  position: absolute;
+  inset: 292px 0 0 277px;
+}
+
+.align__right-span {
+  position: absolute;
+  inset: 420px 20px 0 0;
+  letter-spacing: 30px;
 }
 
 .cover__description {
+  position: absolute;
   display: flex;
-  align-items: center;
+  z-index: 0;
+  /* inset: 0; */
+  align-items: flex-end;
+  bottom: 63px;
+  left: 422px;
+  z-index: 100;
+  align-content: center;
   justify-content: center;
-  z-index: 1;
+  word-spacing: 17px;
 }
 
 .cover__description-text {
@@ -106,6 +145,108 @@
   font-style: normal;
   font-weight: 400;
   line-height: 28px;
-  /* 127.273% */
   text-transform: uppercase;
+}
+
+.bet__button {
+  position: relative;
+  width: 257px;
+  height: 52px;
+  left: 83px;
+  top: 12px;
+  border: 1px solid #fff;
+  background: transparent;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.lots {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.lots__heading {
+  color: #000;
+  font-family: Raleway;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  padding-top: 180px;
+  padding-left: 90px;
+}
+
+.lots__card-list {
+  display: flex;
+  list-style: none;
+  max-width: 430px;
+  height: 100%;
+  justify-content: space-between;
+  padding: 27px 51px;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  min-width: 430px;
+  flex-grow: 1;
+}
+
+.card {
+  max-width: 430px;
+  height: 450px;
+  padding: 50px 30px 39px 39px;
+
+}
+
+.card__title {
+  color: #fff;
+  font-family: Raleway,sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 26.4px */
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  color: #FFF;
+font-family: Raleway,sans-serif;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 120%; /* 24px */
+}
+
+article {
+  list-style-type: none;
+  display: flex;
+  list-style-type: none;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: stretch;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+  background-size: 100%;	
+  
+
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+  background-size: 100%;
+}
+
+.card_type_picture {
+  background: url(/images/card-lot-03.jpg);
+  background-size: 100%;
 }
