--- a/styles/style.css
+++ b/styles/style.css
@@ -44,12 +44,13 @@
   height: 757px;
   background-position: center center;
   background-size: 100% auto;
+  z-index: 0;
 }
 
 .overlay {
-  position: relative;
+  position: absolute;
   background-color: rgb(0 0 0 / 0.6);
-  z-index: 100;
+  z-index: 1;
   inset: 0;
   height: 100%;
   width: 100%;
@@ -162,15 +163,13 @@
 }
 
 .lots {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: space-between;
+  position: relative;
+  
 }
 
 .lots__heading {
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -198,13 +197,13 @@
 .card {
   max-width: 430px;
   height: 450px;
-  padding: 50px 30px 39px 39px;
+  padding: 50px 40px 50px 40px;
 
 }
 
 .card__title {
   color: #fff;
-  font-family: Raleway,sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -215,7 +214,7 @@
 
 .card__text {
   color: #FFF;
-font-family: Raleway,sans-serif;
+font-family: Raleway, sans-serif;
 font-size: 20px;
 font-style: normal;
 font-weight: 400;
@@ -247,4 +246,20 @@ article {
 .card_type_picture {
   background: url(/images/card-lot-03.jpg);
   background-size: 100%;
+}
+
+.card__link{
+text-decoration: none;
+}
+
+.lots__look-more-link{
+  color: #000;
+font-family: Raleway;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+padding-left: 90px;
+text-underline-offset: 5px;
+
 }
