--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,20 @@
-.header{
+.header {
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   padding: 92px 50px 92px 50px;
 }
 
+.header__menu{
+  padding-bottom: 3px;
+  padding-left: 1px;
+
+}
+
 .header__links-list {
   display: flex;
-  gap: 32px;
+  gap: 33px;
   list-style-type: circle;
   text-underline-offset: 5px;
   color: #000000;
@@ -36,6 +43,11 @@
   text-underline-offset: 3px;
   width: 240px;
   justify-self: end;
+}
+
+.main {
+  margin: auto;
+  max-width: 1440px;
 }
 
 .cover {
@@ -164,7 +176,7 @@
 
 .lots {
   position: relative;
-  
+
 }
 
 .lots__heading {
@@ -185,7 +197,7 @@
   max-width: 430px;
   height: 100%;
   justify-content: space-between;
-  padding: 27px 51px;
+  padding: 28px 51px;
   gap: 25px;
 }
 
@@ -207,18 +219,20 @@
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
-  line-height: 120%; /* 26.4px */
+  line-height: 120%;
+  /* 26.4px */
   text-decoration-line: underline;
   text-transform: uppercase;
 }
 
 .card__text {
   color: #FFF;
-font-family: Raleway, sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 120%; /* 24px */
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  /* 24px */
 }
 
 article {
@@ -233,8 +247,8 @@ article {
 
 .card_type_film {
   background-image: url(/images/card-lot-01.jpg);
-  background-size: 100%;	
-  
+  background-size: 100%;
+
 
 }
 
@@ -248,18 +262,67 @@ article {
   background-size: 100%;
 }
 
-.card__link{
-text-decoration: none;
+.card__link {
+  text-decoration: none;
 }
 
-.lots__look-more-link{
+.lots__look-more-link {
   color: #000;
-font-family: Raleway;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-padding-left: 90px;
-text-underline-offset: 5px;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 90px;
+  text-underline-offset: 5px;
 
 }
+
+.about {
+  display: grid;
+  grid-template-columns: 430px 2fr;
+  margin: 183px 50px 181px 50px;
+  justify-items: center;
+  gap: 25px;
+
+}
+
+.about__logo {
+  display: flex;
+  width: 240px;
+  height: 240px;
+  padding: 0px 95px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+.about__logo-img {
+  width: 147px;
+  height: 240px;
+  flex-shrink: 0;
+}
+
+.about__title {
+  color: #000;
+  font-family: Raleway,sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  
+}
+
+.about__text {
+  padding-top: 100px;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
