--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
 .header {
-  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
+  margin: 0 auto;
   padding: 92px 50px 92px 50px;
 }
 
-.header__menu{
+.header__menu {
   padding-bottom: 3px;
   padding-left: 1px;
 
@@ -15,13 +15,13 @@
 .header__links-list {
   display: flex;
   gap: 33px;
-  list-style-type: circle;
-  text-underline-offset: 5px;
   color: #000000;
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
+  text-underline-offset: 5px;
+  list-style-type: circle;
 }
 
 .header__links-list-item_no-bullit {
@@ -34,38 +34,38 @@
 }
 
 .address {
+  justify-self: end;
+  width: 240px;
   color: #000000;
   font-family: Raleway, sans-serif;
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 24px;
   text-underline-offset: 3px;
-  width: 240px;
-  justify-self: end;
 }
 
 .main {
-  margin: auto;
   max-width: 1440px;
+  margin: auto;
 }
 
 .cover {
   position: relative;
-  background-image: url("/images/cover.jpg");
+  z-index: 0;
   height: 757px;
+  background-image: url("/images/cover.jpg");
   background-position: center center;
   background-size: 100% auto;
-  z-index: 0;
 }
 
 .overlay {
   position: absolute;
-  background-color: rgb(0 0 0 / 0.6);
-  z-index: 1;
   inset: 0;
-  height: 100%;
+  z-index: 1;
   width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 0.6);
 }
 
 .cover__title {
@@ -74,49 +74,49 @@
 
 .align__left {
   position: absolute;
+  inset: 165px 49px 30px;
+  z-index: 100;
+  justify-content: start;
   color: #fff;
   font-family: Raleway, sans-serif;
+  font-weight: 700;
   font-size: 100px;
   font-style: normal;
-  font-weight: 700;
   line-height: 115%;
   letter-spacing: 30px;
   text-transform: uppercase;
-  justify-content: start;
-  inset: 165px 49px 30px;
-  z-index: 100;
 }
 
 .align__center {
   position: absolute;
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 115%;
-  letter-spacing: 30px;
-  text-transform: uppercase;
-  text-align: center;
-  justify-content: center;
   inset: 292px 0 0 -153px;
   z-index: 100;
+  justify-content: center;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 100px;
+  font-style: normal;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .align__right {
   position: absolute;
-  color: #fff;
-  text-align: right;
-  font-family: Raleway, sans-serif;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  text-transform: uppercase;
-  text-align: right;
-  justify-content: flex-end;
   inset: 420px 392px;
   z-index: 100;
+  justify-content: flex-end;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 100px;
+  font-style: normal;
+  line-height: 100%;
+  text-align: right;
+  text-align: right;
+  text-transform: uppercase;
 }
 
 .align__left-span {
@@ -136,42 +136,42 @@
 
 .cover__description {
   position: absolute;
-  display: flex;
-  z-index: 0;
-  /* inset: 0; */
-  align-items: flex-end;
   bottom: 63px;
   left: 422px;
+  z-index: 0;
   z-index: 100;
-  align-content: center;
+  display: flex;
   justify-content: center;
+  /* inset: 0; */
+  align-items: flex-end;
+  align-content: center;
   word-spacing: 17px;
 }
 
 .cover__description-text {
   color: #fff;
-  text-align: center;
   font-family: Raleway, sans-serif;
+  font-weight: 400;
   font-size: 22px;
   font-style: normal;
-  font-weight: 400;
   line-height: 28px;
+  text-align: center;
   text-transform: uppercase;
 }
 
 .bet__button {
   position: relative;
+  top: 12px;
+  left: 83px;
   width: 257px;
   height: 52px;
-  left: 83px;
-  top: 12px;
   border: 1px solid #fff;
-  background: transparent;
   color: #fff;
   font-family: Raleway, sans-serif;
-  font-size: 22px;
   font-weight: 400;
+  font-size: 22px;
   text-transform: uppercase;
+  background: transparent;
 }
 
 .lots {
@@ -180,69 +180,84 @@
 }
 
 .lots__heading {
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-transform: uppercase;
   padding-top: 180px;
   padding-left: 90px;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  font-style: normal;
+  line-height: normal;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
   display: flex;
-  list-style: none;
+  justify-content: space-between;
+  gap: 25px;
   max-width: 430px;
   height: 100%;
-  justify-content: space-between;
   padding: 28px 51px;
-  gap: 25px;
+  list-style: none;
 }
 
 .lots__card-list-item {
-  min-width: 430px;
   flex-grow: 1;
+  min-width: 430px;
 }
 
-.card {
+/*.card {
   max-width: 430px;
   height: 450px;
   padding: 50px 40px 50px 40px;
 
+}*/
+
+.card {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  width: 430px;
+  min-height: 450px;
+  padding: 50px 40px 50px 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
 }
 
 .card__title {
+  position: relative;
+  z-index: 2;
   color: #fff;
   font-family: Raleway, sans-serif;
+  font-weight: 700;
   font-size: 22px;
   font-style: normal;
-  font-weight: 700;
   line-height: 120%;
-  /* 26.4px */
   text-decoration-line: underline;
   text-transform: uppercase;
 }
 
 .card__text {
+  position: relative;
+  z-index: 2;
   color: #FFF;
   font-family: Raleway, sans-serif;
+  font-weight: 400;
   font-size: 20px;
   font-style: normal;
-  font-weight: 400;
   line-height: 120%;
-  /* 24px */
 }
 
 article {
-  list-style-type: none;
   display: flex;
-  list-style-type: none;
   flex-direction: column;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-between;
   align-content: stretch;
+  list-style-type: none;
+  list-style-type: none;
 }
 
 .card_type_film {
@@ -267,13 +282,13 @@ article {
 }
 
 .lots__look-more-link {
+  padding-left: 90px;
   color: #000;
   font-family: Raleway;
+  font-weight: 400;
   font-size: 20px;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
-  padding-left: 90px;
   text-underline-offset: 5px;
 
 }
@@ -281,48 +296,101 @@ article {
 .about {
   display: grid;
   grid-template-columns: 430px 2fr;
-  margin: 183px 50px 181px 50px;
   justify-items: center;
   gap: 25px;
+  margin: 183px 50px 181px 50px;
 
 }
 
 .about__logo {
   display: flex;
-  width: 240px;
-  height: 240px;
-  padding: 0px 95px;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
-  flex-shrink: 0;
-  background-color: #000;
+  width: 240px;
+  height: 240px;
   border-radius: 50%;
+  padding: 0px 95px;
+  background-color: #000;
 }
 
 .about__logo-img {
+  flex-shrink: 0;
   width: 147px;
   height: 240px;
-  flex-shrink: 0;
 }
 
 .about__title {
   color: #000;
-  font-family: Raleway,sans-serif;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
   font-size: 40px;
   font-style: normal;
-  font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  
+
 }
 
 .about__text {
   padding-top: 100px;
   color: #000;
   font-family: Raleway, sans-serif;
+  font-weight: 400;
   font-size: 20px;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
 }
 
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  margin: 0 auto;
+}
+
+.footer__menu {
+  display: flex;
+  justify-items: flex-start;
+  justify-content: center;
+  padding-bottom: 57px;
+}
+
+
+.footer__links-list {
+  color: #000000;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: normal;
+  text-align: center;
+  text-underline-offset: 3px;
+
+  list-style-type: none;
+}
+
+.footer__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.address__footer {
+  display: flex;
+  flex-direction: column;
+  justify-self: start;
+  width: 60%;
+  padding: 0 0 0 50px;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: flex-end;
+  align-content: flex-start;
+  column-gap: 48px;
+  padding-right: 50px;
+  list-style-type: none;
+
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
