--- a/styles/global.css
+++ b/styles/global.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  width: 1440px;
-  min-width: 1100px;
-  margin: 0;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
   padding: 0;
   font-family: Raleway, sans-serif;
 }
