--- a/styles/style.css
+++ b/styles/style.css
@@ -53,8 +53,8 @@
 .cover {
   position: relative;
   z-index: 0;
-  height: 757px;
-  background-image: url("/images/cover.jpg");
+  min-height: 757px;
+  background-image: url(/images/cover.jpg);
   background-position: center center;
   background-size: 100% auto;
 }
@@ -73,8 +73,7 @@
 }
 
 .align__left {
-  position: absolute;
-  inset: 165px 49px 30px;
+  display: block;
   z-index: 100;
   justify-content: start;
   color: #fff;
@@ -85,11 +84,12 @@
   line-height: 115%;
   letter-spacing: 30px;
   text-transform: uppercase;
+  padding-top: 164px;
+  padding-left: 50px;
 }
 
 .align__center {
-  position: absolute;
-  inset: 292px 0 0 -153px;
+  display: block;
   z-index: 100;
   justify-content: center;
   color: #fff;
@@ -101,11 +101,12 @@
   letter-spacing: 30px;
   text-align: center;
   text-transform: uppercase;
+  padding-left: 109px;
+  padding-top: 291px;
 }
 
 .align__right {
-  position: absolute;
-  inset: 420px 392px;
+  display: block;
   z-index: 100;
   justify-content: flex-end;
   color: #fff;
@@ -116,33 +117,32 @@
   line-height: 100%;
   text-align: right;
   text-transform: uppercase;
+  padding-top: 420px;
+  padding-left: 70px;
+
 }
 
 .align__left-span {
-  padding: 0 242px;
+  padding-left: 30px;
 }
 
 .align__center-span {
-  position: absolute;
-  inset: 292px 0 0 277px;
+  padding-left: 30px;
 }
 
 .align__right-span {
-  position: absolute;
-  inset: 420px 20px 0 0;
+  padding-top: 419px;
+  padding-left: 59px;
   letter-spacing: 30px;
 }
 
 .cover__description {
-  position: absolute;
   display: flex;
-  bottom: 63px;
-  left: 422px;
-  z-index: 1;
   justify-content: center;
-  align-items: flex-end;
-  align-content: center;
-  word-spacing: 17px;
+  align-items: center;
+  word-spacing: 18px;
+  padding-left: 370px;
+  padding-top: 133px;
 }
 
 .cover__description-text {
@@ -154,14 +154,10 @@
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
+  z-index: 1;
 }
 
 .bet__button {
-  position: relative;
-  top: 12px;
-  left: 83px;
-  width: 257px;
-  height: 52px;
   border: 1px solid #fff;
   color: #fff;
   font-family: Raleway, sans-serif;
@@ -169,11 +165,9 @@
   font-size: 22px;
   text-transform: uppercase;
   background: transparent;
-}
-
-.lots {
-  position: relative;
-
+  z-index: 1;
+  padding: 12px 32px;
+  margin-left: 77px;
 }
 
 .lots__heading {
@@ -214,6 +208,9 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  flex-direction: column;
+  justify-content: space-between;
+  background-size: 100%;
 
 }
 
@@ -241,11 +238,6 @@
   line-height: 120%;
 }
 
-article {
-  flex-direction: column;
-  justify-content: space-between;
- }
-
 .card_type_film {
   background-image: url(/images/card-lot-01.jpg);
   background-size: 100%;
@@ -268,7 +260,7 @@ article {
 .lots__look-more-link {
   padding-left: 90px;
   color: #000;
-  font-family: Raleway,sans-serif;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 20px;
   font-style: normal;
@@ -325,6 +317,10 @@ article {
   line-height: normal;
 }
 
+.about__text-part {
+  padding-top: 23px;
+}
+
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -348,7 +344,6 @@ article {
   line-height: normal;
   text-align: center;
   text-underline-offset: 3px;
-
   list-style-type: none;
 }
 
