--- a/styles/style.css
+++ b/styles/style.css
@@ -9,17 +9,12 @@
 .header__menu {
   padding-bottom: 3px;
   padding-left: 1px;
-
 }
 
 .header__links-list {
   display: flex;
   gap: 33px;
-  color: #000000;
-  font-weight: 400;
   font-size: 18px;
-  font-style: normal;
-  line-height: normal;
   text-underline-offset: 5px;
   list-style-type: circle;
 }
@@ -36,9 +31,6 @@
 .address {
   justify-self: end;
   width: 240px;
-  color: #000000;
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
   font-size: 18px;
   font-style: normal;
   line-height: 24px;
@@ -52,9 +44,7 @@
 
 .cover {
   position: relative;
-  z-index: 0;
-  min-height: 757px;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-position: center center;
   background-size: 100% auto;
 }
@@ -62,28 +52,25 @@
 .overlay {
   position: absolute;
   inset: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
   background-color: rgb(0 0 0 / 0.6);
 }
 
 .cover__title {
   display: flex;
+  text-transform: uppercase;
+  font-style: normal;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 100px;
 }
 
 .align__left {
   display: block;
   z-index: 100;
   justify-content: start;
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 100px;
-  font-style: normal;
   line-height: 115%;
   letter-spacing: 30px;
-  text-transform: uppercase;
   padding-top: 164px;
   padding-left: 50px;
 }
@@ -92,34 +79,21 @@
   display: block;
   z-index: 100;
   justify-content: center;
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 100px;
-  font-style: normal;
-  line-height: 115%;
+  line-height: 100%;
   letter-spacing: 30px;
   text-align: center;
-  text-transform: uppercase;
   padding-left: 109px;
-  padding-top: 291px;
+  padding-top: 300px;
 }
 
 .align__right {
   display: block;
   z-index: 100;
   justify-content: flex-end;
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 100px;
-  font-style: normal;
   line-height: 100%;
   text-align: right;
-  text-transform: uppercase;
   padding-top: 420px;
   padding-left: 70px;
-
 }
 
 .align__left-span {
@@ -140,19 +114,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
+  font-size: 22px;
   word-spacing: 18px;
   padding-left: 370px;
   padding-top: 133px;
+  padding-bottom: 52px;
 }
 
 .cover__description-text {
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
-  font-size: 22px;
-  font-style: normal;
-  line-height: 28px;
-  text-align: center;
   text-transform: uppercase;
   z-index: 1;
 }
@@ -160,8 +130,6 @@
 .bet__button {
   border: 1px solid #fff;
   color: #fff;
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
   font-size: 22px;
   text-transform: uppercase;
   background: transparent;
@@ -173,12 +141,7 @@
 .lots__heading {
   padding-top: 180px;
   padding-left: 90px;
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
   font-size: 40px;
-  font-style: normal;
-  line-height: normal;
   text-transform: uppercase;
 }
 
@@ -205,52 +168,35 @@
   width: 430px;
   min-height: 450px;
   padding: 50px 40px 50px 40px;
-  background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
   flex-direction: column;
   justify-content: space-between;
-  background-size: 100%;
-
 }
 
 .card__title {
-  position: relative;
   z-index: 2;
   color: #fff;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
   font-size: 22px;
-  font-style: normal;
-  line-height: 120%;
   text-decoration-line: underline;
   text-transform: uppercase;
 }
 
 .card__text {
-  position: relative;
   z-index: 2;
   color: #FFF;
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
   font-size: 20px;
-  font-style: normal;
-  line-height: 120%;
 }
 
 .card_type_film {
-  background-image: url(/images/card-lot-01.jpg);
-  background-size: 100%;
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  background-image: url(/images/card-lot-02.jpg);
-  background-size: 100%;
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  background: url(/images/card-lot-03.jpg);
-  background-size: 100%;
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__link {
@@ -259,14 +205,8 @@
 
 .lots__look-more-link {
   padding-left: 90px;
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
   font-size: 20px;
-  font-style: normal;
-  line-height: normal;
   text-underline-offset: 5px;
-
 }
 
 .about {
@@ -275,14 +215,12 @@
   justify-items: center;
   gap: 25px;
   margin: 183px 50px 181px 50px;
-
 }
 
 .about__logo {
   display: flex;
   flex-shrink: 0;
   justify-content: center;
-  align-items: center;
   width: 240px;
   height: 240px;
   border-radius: 50%;
@@ -297,24 +235,13 @@
 }
 
 .about__title {
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
   font-size: 40px;
-  font-style: normal;
-  line-height: normal;
   text-transform: uppercase;
-
 }
 
 .about__text {
   padding-top: 100px;
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
   font-size: 20px;
-  font-style: normal;
-  line-height: normal;
 }
 
 .about__text-part {
@@ -366,7 +293,6 @@
   column-gap: 48px;
   padding-right: 50px;
   list-style-type: none;
-
 }
 
 .footer__social-icon {
